force-app/main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <description>This record details individuals who attended an event held for or by Atlas Assistance Dogs</description>
    <label>Attendee</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attendee Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>