force-app/main/default/objects/Attendee__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>This field records the number of hours the attendee spent at this event</description>
    <label>Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>