force-app/main/default/objects/Attendee__c/recordTypes/Donor.recordType-meta.xml
<RecordType>
    <fullName>Donor</fullName>
    <active>true</active>
    <description>Attended an event as a donor</description>
    <label>Donor</label>
</RecordType>