force-app/main/default/objects/Attendee__c/recordTypes/Trainer.recordType-meta.xml
<RecordType>
    <fullName>Trainer</fullName>
    <active>true</active>
    <description>Attended an Atlas event as a Trainer, likely earning CEU&apos;s</description>
    <label>Trainer</label>
</RecordType>