force-app/main/default/objects/Attendee__c/recordTypes/Volunteer.recordType-meta.xml
<RecordType>
    <fullName>Volunteer</fullName>
    <active>true</active>
    <description>Attended an Atlas event as a volunteer</description>
    <label>Volunteer</label>
</RecordType>